# internal/logistic/handlers.go
@@ -2,8 +2,13 @@
 package logistic
 
 import (
+	"context"
 	"encoding/json"
+	"fmt"
+	"io/ioutil"
 	"net/http"
+
+	"github.com/pkg/errors"
 
 	"github.com/IgorRybak2055/logistic-service/internal/models"
 )
@@ -57,194 +62,191 @@ func (a *App) handleCompanyRegister(w http.ResponseWriter, r *http.Request) erro
 	return nil
 }
 
+// Registration godoc
+// @Summary Registration user of contact service
+// @Description Create a new user with the input name, email & password.
+// @Tags Account
+// @Produce  json
+// @Param account body models.Account true "account"
+// @Success 200 {object} models.Account "response structure: {message:"answer"}"
+// @Failure 400 {string} string "response structure: {error:"error message"}"
+// @Router /api/register [post]
+func (a *App) handleRegister(w http.ResponseWriter, r *http.Request) error {
+	var newAccount models.Account
+
+	if err := json.NewDecoder(r.Body).Decode(&newAccount); err != nil {
+		a.Logger.Errorf("failed to decode account: ", err)
+		return err
+	}
+
+	var account, err = a.accountService.CreateAccount(r.Context(), newAccount)
+	if err != nil {
+		a.Logger.Warn("creating account:", err)
+
+		return newError(http.StatusBadRequest, err)
+	}
+
+	Respond(w, http.StatusOK, Message(account))
+
+	return nil
+}
 
 
-//
-// // Set new password godoc
-// // @Summary Set new password
-// // @Description Setting new password for account
-// // @Tags Account
-// // @Produce json
-// // @Param password query string true "new password for account"
-// // @Param confirm_password query string true "confirm_password new password"
-// // @Success 200
-// // @Failure 400 {string} string "response structure: {error:"error message"}"
-// // @Router /api/new_password [post]
-// // @Security ApiKeyAuth
-// func (a *App) handleNewPassword(w http.ResponseWriter, r *http.Request) error {
-// 	var (
-// 		password        = r.FormValue("password")
-// 		confirmPassword = r.FormValue("confirm_password")
-// 	)
-//
-// 	if password != confirmPassword {
-// 		a.Logger.Warnf("creating account: %s", "mismatched passwords")
-//
-// 		return newError(http.StatusBadRequest, errors.New("password mismatch"))
-// 	}
-//
-// 	var err = a.accountService.SetNewPassword(r.Context(), password)
-// 	if err != nil {
-// 		return newError(http.StatusBadRequest, err)
-// 	}
-//
-// 	Respond(w, http.StatusOK, nil)
-//
-// 	return nil
-// }
-//
-// // Registration godoc
-// // @Summary Registration user of contact service
-// // @Description Create a new user with the input name, email & password.
-// // @Tags Account
-// // @Produce  json
-// // @Param name query string true "account name"
-// // @Param username query string true "account email"
-// // @Param password query string true "account password"
-// // @Success 200 {object} models.Account "response structure: {message:"answer"}"
-// // @Failure 400 {string} string "response structure: {error:"error message"}"
-// // @Router /api/register [post]
-// func (a *App) handleRegister(w http.ResponseWriter, r *http.Request) error {
-// 	var newAccount models.Account
-//
-// 	if err := json.NewDecoder(r.Body).Decode(&newAccount); err != nil {
-// 		a.Logger.Errorf("failed to decode account: ", err)
-// 		return err
-// 	}
-//
-// 	var account, err = a.accountService.CreateAccount(r.Context(), newAccount)
-// 	if err != nil {
-// 		a.Logger.Warn("creating account:", err)
-//
-// 		return newError(http.StatusBadRequest, err)
-// 	}
-//
-// 	Respond(w, http.StatusOK, Message(account))
-//
-// 	return nil
-// }
-//
-// // Login godoc
-// // @Summary Login in ragger
-// // @Description Login in ragger with email and password
-// // @Tags Account
-// // @Produce  json
-// // @Param email query string true "account email"
-// // @Param password query string true "account password len(password) > 6"
-// // @Success 200 {object} models.Account "response structure: {message:"answer"}"
-// // @Failure 400 {string} string "response structure: {error:"error message"}"
-// // @Router /api/login [post]
-// func (a *App) handleLogin(w http.ResponseWriter, r *http.Request) error {
-// 	var (
-// 		email    = r.FormValue("email")
-// 		password = r.FormValue("password")
-// 	)
-//
-// 	var account, err = a.accountService.Login(r.Context(), email, password)
-// 	if err != nil {
-// 		a.Logger.Warn("login:", err)
-//
-// 		return newError(http.StatusBadRequest, err)
-// 	}
-//
-// 	Respond(w, http.StatusOK, Message(account))
-//
-// 	return nil
-// }
-//
-// // Generate Token godoc
-// // @Summary Generate Token in ragger
-// // @Description Generate Token for access to ragger
-// // @Tags Token
-// // @Produce json
-// // @Param refresh_token query string true "last generated refresh_token"
-// // @Success 200 {object} string "response structure: {message:"access_token:access, refresh_token:refresh"}"
-// // @Failure 401 {string} string "response structure: {error:"error message"}"
-// // @Router /api/token [get]
-// func (a *App) handleGenerateToken(w http.ResponseWriter, r *http.Request) error {
-// 	var refreshToken = r.FormValue("refresh_token")
-//
-// 	newTokenPair, err := a.accountService.GenerateToken(r.Context(), refreshToken)
-// 	if err != nil {
-// 		a.Logger.Warn("generating token:", err)
-//
-// 		return newError(http.StatusUnauthorized, err)
-// 	}
-//
-// 	Respond(w, http.StatusOK, Message(newTokenPair))
-//
-// 	return nil
-// }
-//
-// // Restore password godoc
-// // @Summary Restore password
-// // @Description Returned html page for setting new password
-// // @Tags Account
-// // @Produce html
-// // @Success 200
-// // @Failure 500 {string} string "response structure: {error:"error message"}"
-// // @Router /api/restore_password [get]
-// func (a *App) handleRestorePassword(w http.ResponseWriter, r *http.Request) error {
-// 	switch r.Method {
-// 	case http.MethodGet:
-// 		var body, err = ioutil.ReadFile("./assets/new_password.html")
-// 		if err != nil {
-// 			a.Logger.Warn("reading file:", err)
-//
-// 			return newError(http.StatusInternalServerError, err)
-// 		}
-//
-// 		fmt.Fprint(w, string(body))
-// 	case http.MethodPost:
-// 		var email = r.FormValue("email")
-//
-// 		var err = a.accountService.RestorePassword(r.Context(), a.sendToEmailCh, email)
-// 		if err != nil {
-// 			a.Logger.Warn("checking email:", err)
-//
-// 			return newError(http.StatusBadRequest, err)
-// 		}
-//
-// 		Respond(w, http.StatusOK, Message("check your email please"))
-// 	default:
-// 		return newError(http.StatusBadRequest, errors.New("undefined http method for this request"))
-// 	}
-//
-// 	return nil
-// }
-//
-// func contextUserID(ctx context.Context) int64 { return ctx.Value("user").(int64) }
-//
-// // New project godoc
-// // @Summary Creating new project.
-// // @Description  Creating new project with title and description.
-// // @Tags Project
-// // @Produce  json
-// // @Param title query string true "project title"
-// // @Param description query string true "project description"
-// // @Success 201 {object} models.Project "response structure: {message:project}"
-// // @Failure 400 {string} string "response structure: {error:"error message"}"
-// // @Router /api/projects [post]
-// // @Security ApiKeyAuth
-// func (a *App) handleNewProject(w http.ResponseWriter, r *http.Request) error {
-// 	var ctx = r.Context()
-//
-// 	var newProject = models.Project{
-// 		Title:       r.FormValue("title"),
-// 		Description: r.FormValue("description"),
-// 		UserID:      contextUserID(ctx),
-// 	}
-//
-// 	var account, err = a.projectService.NewProject(ctx, newProject)
-// 	if err != nil {
-// 		return newError(http.StatusBadRequest, err)
-// 	}
-//
-// 	Respond(w, http.StatusCreated, Message(account))
-//
-// 	return nil
-// }
-//
+// Set new password godoc
+// @Summary Set new password
+// @Description Setting new password for account
+// @Tags Account
+// @Produce json
+// @Param password query string true "new password for account"
+// @Param confirm_password query string true "confirm_password new password"
+// @Success 200
+// @Failure 400 {string} string "response structure: {error:"error message"}"
+// @Router /api/new_password [post]
+// @Security ApiKeyAuth
+func (a *App) handleNewPassword(w http.ResponseWriter, r *http.Request) error {
+	var (
+		password        = r.FormValue("password")
+		confirmPassword = r.FormValue("confirm_password")
+	)
+
+	if password != confirmPassword {
+		a.Logger.Warnf("creating account: %s", "mismatched passwords")
+
+		return newError(http.StatusBadRequest, errors.New("password mismatch"))
+	}
+
+	var err = a.accountService.SetNewPassword(r.Context(), password)
+	if err != nil {
+		return newError(http.StatusBadRequest, err)
+	}
+
+	Respond(w, http.StatusOK, nil)
+
+	return nil
+}
+
+
+// Login godoc
+// @Summary Login in ragger
+// @Description Login in ragger with email and password
+// @Tags Account
+// @Produce  json
+// @Param email query string true "account email"
+// @Param password query string true "account password len(password) > 6"
+// @Success 200 {object} models.Account "response structure: {message:"answer"}"
+// @Failure 400 {string} string "response structure: {error:"error message"}"
+// @Router /api/login [post]
+func (a *App) handleLogin(w http.ResponseWriter, r *http.Request) error {
+	var (
+		email    = r.FormValue("email")
+		password = r.FormValue("password")
+	)
+
+	var account, err = a.accountService.Login(r.Context(), email, password)
+	if err != nil {
+		a.Logger.Warn("login:", err)
+
+		return newError(http.StatusBadRequest, err)
+	}
+
+	Respond(w, http.StatusOK, Message(account))
+
+	return nil
+}
+
+// Generate Token godoc
+// @Summary Generate Token in ragger
+// @Description Generate Token for access to ragger
+// @Tags Token
+// @Produce json
+// @Param refresh_token query string true "last generated refresh_token"
+// @Success 200 {object} string "response structure: {message:"access_token:access, refresh_token:refresh"}"
+// @Failure 401 {string} string "response structure: {error:"error message"}"
+// @Router /api/token [get]
+func (a *App) handleGenerateToken(w http.ResponseWriter, r *http.Request) error {
+	var refreshToken = r.FormValue("refresh_token")
+
+	newTokenPair, err := a.accountService.GenerateToken(r.Context(), refreshToken)
+	if err != nil {
+		a.Logger.Warn("generating token:", err)
+
+		return newError(http.StatusUnauthorized, err)
+	}
+
+	Respond(w, http.StatusOK, Message(newTokenPair))
+
+	return nil
+}
+
+// Restore password godoc
+// @Summary Restore password
+// @Description Returned html page for setting new password
+// @Tags Account
+// @Produce html
+// @Success 200
+// @Failure 500 {string} string "response structure: {error:"error message"}"
+// @Router /api/restore_password [get]
+func (a *App) handleRestorePassword(w http.ResponseWriter, r *http.Request) error {
+	switch r.Method {
+	case http.MethodGet:
+		var body, err = ioutil.ReadFile("./assets/new_password.html")
+		if err != nil {
+			a.Logger.Warn("reading file:", err)
+
+			return newError(http.StatusInternalServerError, err)
+		}
+
+		fmt.Fprint(w, string(body))
+	case http.MethodPost:
+		var email = r.FormValue("email")
+
+		var err = a.accountService.RestorePassword(r.Context(), a.sendToEmailCh, email)
+		if err != nil {
+			a.Logger.Warn("checking email:", err)
+
+			return newError(http.StatusBadRequest, err)
+		}
+
+		Respond(w, http.StatusOK, Message("check your email please"))
+	default:
+		return newError(http.StatusBadRequest, errors.New("undefined http method for this request"))
+	}
+
+	return nil
+}
+
+func contextUserID(ctx context.Context) int64 { return ctx.Value("user").(int64) }
+
+// New project godoc
+// @Summary Creating new project.
+// @Description  Creating new project with title and description.
+// @Tags Project
+// @Produce  json
+// @Param title query string true "project title"
+// @Param description query string true "project description"
+// @Success 201 {object} models.Project "response structure: {message:project}"
+// @Failure 400 {string} string "response structure: {error:"error message"}"
+// @Router /api/projects [post]
+// @Security ApiKeyAuth
+func (a *App) handleNewProject(w http.ResponseWriter, r *http.Request) error {
+	var ctx = r.Context()
+
+	var newProject = models.Project{
+		Title:       r.FormValue("title"),
+		Description: r.FormValue("description"),
+		UserID:      contextUserID(ctx),
+	}
+
+	var account, err = a.projectService.NewProject(ctx, newProject)
+	if err != nil {
+		return newError(http.StatusBadRequest, err)
+	}
+
+	Respond(w, http.StatusCreated, Message(account))
+
+	return nil
+}
+
 // // Get all project godoc
 // // @Summary Get all projects of user.
 // // @Description Get all projects of authorized user.
