# internal/models/account.go
@@ -18,8 +18,10 @@ type Token struct {
 // Account a struct to user info.
 type Account struct {
 	ID        int64             `db:"id" json:"id"`
+	CompanyId int64				`db:"company_id" json:"company_id"`
 	Name      string            `db:"name" json:"name"`
 	Email     string            `db:"email" json:"email"`
+	Phone     string			`db:"phone" json:"phone,omitempty"`
 	Password  string            `db:"password" json:"password,omitempty"`
 	CreatedAt time.Time         `db:"created_at"`
 	UpdatedAt time.Time         `db:"updated_at"`
